firebase 데이터 불러오기

--- a/public/upload.html
+++ b/public/upload.html
@@ -55,7 +55,11 @@
     </nav>
 
     <div class="container mt-3">
-
+      <input type="text" class="form-control mt-2" id="title" placeholder="title">
+      <textarea id="contetn" class="form-control mt-2">content</textarea>
+      <input type="text" class="form-control mt-2" id="price" placeholder="price">
+      <input type="file" class="form-control mt-2" id="image">
+      <button class="btn btn-danger mt-3">upload</button>
     </div>
 
 
@@ -77,21 +81,9 @@
     <!-- 데이터 조회 -->
     <script>
       const db = firebase.firestore();
-      db.collection('product').get().then((결과)=>{
-        결과.forEach((doc)=>{
-          const template = `<div class="product">
-        <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
-        <div class="flex-grow-1 p-4">
-          <h5 class="title">${doc.data().제목}</h5>
-          <p class="date">2030년 1월 8일</p>
-          <p class="price">${doc.data().가격}원</p>
-          <p class="float-end">🤍0</p>
-        </div>
-      </div>`;
-          $('.container').append(template);
-          
-        })
-      })
+      db.collection('product').add.set({제목 : '변기'})
+
+
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
