--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
         <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
         <div class="flex-grow-1 p-4">
           <h5 class="title">${doc.data().제목}</h5>
-          <p class="date">2030년 1월 8일</p>
+          <p class="date">${doc.data().날짜}</p>
           <p class="price">${doc.data().가격}원</p>
           <p class="float-end">🤍0</p>
         </div>
