--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
       db.collection('product').get().then((결과)=>{
         결과.forEach((doc)=>{
           const template = `<div class="product">
-        <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
+        <div class="thumbnail" style="background-image: url('${doc.data().이미지}')"></div>
         <div class="flex-grow-1 p-4">
           <h5 class="title">${doc.data().제목}</h5>
           <p class="date">${doc.data().날짜}</p>
