--- a/public/upload.html
+++ b/public/upload.html
@@ -95,19 +95,37 @@
         const storageRef = storage.ref();
         const 저장할경로 = storageRef.child('image/' + file.name);
         const 업로드작업 = 저장할경로.put(file);
+
+        업로드작업.on( 'state_changed', 
+          // 변화시 동작하는 함수 (로딩바 같은거)
+          null, 
+          //에러시 동작하는 함수
+          (error) => {
+            console.error('실패사유는', error);
+          }, 
+          // 성공시 동작하는 함수
+          () => {
+            업로드작업.snapshot.ref.getDownloadURL().then((url) => {
+              console.log('업로드된 경로는', url);
+
+              let 저장할거 = {
+                제목: $('#title').val(),
+                내용: $('#content').val(),
+                가격: parseInt($('#price').val(), 10),
+                날짜: new Date(),
+                이미지: url
+              }
+              db.collection('product').add(저장할거).then((result)=>{
+                console.log(result);
+                // window.location.href = '/index.html';
+              }).catch((error)=>{
+                console.log(error)
+              })
+            });
+          }
+        );
         
-        let 저장할거 = {
-          제목: $('#title').val(),
-          내용: $('#content').val(),
-          가격: parseInt($('#price').val(), 10),
-          날짜: new Date(),
-        }
-        db.collection('product').add(저장할거).then((result)=>{
-          console.log(result)
-          window.location.href = '/index.html'
-        }).catch((error)=>{
-          console.log(error)
-        })
+
       })
       
     </script>
